# giggityflix-peer

./: README.md  pyproject.toml
src/giggityflix_peer/: __init__.py  config.py  di.py  main.py  manage.py  peer_app.py  peer_service.py  urls.py  wsgi.py
src/giggityflix_peer/api/: __init__.py  resource_api.py  router.py  server.py  urls.py
src/giggityflix_peer/config/: django_settings.py  urls.py
src/giggityflix_peer/core/: __init__.py
src/giggityflix_peer/db/: sqlite.py
src/giggityflix_peer/grpc/: client.py  handlers.py
src/giggityflix_peer/models/: media.py
src/giggityflix_peer/old_api/: resource_api.py  server.py
src/giggityflix_peer/old_db/: sqlite.py
src/giggityflix_peer/old_resource_mgmt/: annotations.py  resource_pool.py
src/giggityflix_peer/old_services/: config_service.py  db_service.py  edge_client.py  metadata_service.py  stream_service.py
src/giggityflix_peer/old_utils/: resizable_semaphore.py  video_file_utils.py
src/giggityflix_peer/resource_mgmt/: annotations.py  resource_pool.py
src/giggityflix_peer/scanner/: media_scanner.py  media_scanner_updated.py
src/giggityflix_peer/services/: config_service.py  db_service.py  disk_io_service.py  edge_client.py  metadata_service.py  (+2 more)
tests/: conftest.py  test_api_server.py  test_config.py  test_db_service.py  test_edge_client.py  test_media_scanner.py  test_peer_app.py  test_screenshot_service.py  test_stream_service.py  test_utils.py
tests/api/: test_settings_api.py
tests/scanner/: test_media_scanner_updated.py
tests/services/: test_config_service.py  test_hash_on_demand.py
(+78 files in other folders)
